--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     #uploadModal {
       transition: opacity 0.3s ease;
     }
+
+    .meme-image {
+      width: 100%;
+      height: auto;
+      object-fit: contain; /* Изображения не будут обрезаться */
+    }
   </style>
 </head>
 <body class="bg-orange-50 text-orange-900 font-sans min-h-screen">
@@ -99,40 +105,16 @@
   </div>
 
   <script>
-    let memes = [];
-    const memeGrid = document.getElementById("memeGrid");
-    let isConnected = false;
-
-    const fallbackMemes = [
-      { id: 1, title: "Distracted Boyfriend", imageUrl: "/public/memes/1.jpg", votes: 42, author: "memelord#1337" },
-      { id: 2, title: "Change My Mind", imageUrl: "/public/memes/2.jpg", votes: 35, author: "discord_user#4242" },
-      { id: 3, title: "Drake Hotline Bling", imageUrl: "/public/memes/3.jpg", votes: 28, author: null }
+    let memes = [
+      { id: 1, title: "Meme 1", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme1.jpg", votes: 42, author: "memelord#1337" },
+      { id: 2, title: "Meme 2", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme2.jpg", votes: 35, author: "discord_user#4242" },
+      { id: 3, title: "Meme 3", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme3.jpg", votes: 28, author: null },
+      { id: 4, title: "Meme 4", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme4.jpg", votes: 25, author: "user#1234" },
+      { id: 5, title: "Meme 5", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme5.jpg", votes: 15, author: "user2#2345" },
+      { id: 6, title: "Meme 6", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme6.jpg", votes: 10, author: "user3#3456" }
     ];
 
-    async function loadMemes() {
-      try {
-        const response = await fetch('http://localhost:3000/memes');
-        if (!response.ok) throw new Error('Server error');
-        memes = await response.json();
-        memes = memes.map((meme, index) => ({
-          id: index + 1,
-          title: meme.title || `Meme #${index + 1}`,
-          imageUrl: meme.url,
-          votes: meme.votes || 0,
-          author: meme.author || null
-        }));
-      } catch (error) {
-        console.error("Loading error:", error);
-        memes = fallbackMemes;
-      }
-      updateStats();
-      renderMemes();
-    }
-
-    function updateStats() {
-      document.getElementById('memeCount').textContent = memes.length;
-      document.getElementById('totalVotes').textContent = memes.reduce((sum, meme) => sum + meme.votes, 0);
-    }
+    const memeGrid = document.getElementById("memeGrid");
 
     function renderMemes() {
       if (memes.length === 0) {
@@ -145,9 +127,7 @@
         div.className = "bg-white rounded-lg shadow-md overflow-hidden meme-card hover:shadow-lg";
         div.innerHTML = `
           <div class="relative">
-            <img src="${meme.imageUrl}" alt="${meme.title}" 
-                 class="w-full h-64 object-cover hover:opacity-90 transition"
-                 onerror="this.src='/public/memes/placeholder.jpg'">
+            <img src="${meme.imageUrl}" alt="${meme.title}" class="meme-image" onerror="this.src='https://via.placeholder.com/400x300?text=Image+Error'">
             <div class="absolute top-2 right-2 bg-orange-600 text-white text-xs px-2 py-1 rounded-full">
               #${meme.id}
             </div>
@@ -161,11 +141,6 @@
               <span class="text-xs text-orange-600 font-medium">
                 <i class="fas fa-heart mr-1"></i> ${meme.votes}
               </span>
-              <button onclick="voteMeme(${meme.id})"
-                      class="text-sm bg-orange-600 text-white px-3 py-1 rounded hover:bg-orange-700 transition flex items-center"
-                      ${!isConnected ? 'disabled title="Connect wallet first"' : ''}>
-                <i class="fas fa-vote-yea mr-1"></i> Vote
-              </button>
             </div>
           </div>
         `;
@@ -173,76 +148,7 @@
       });
     }
 
-    async function connectWallet() {
-      if (window.ethereum) {
-        try {
-          const provider = new ethers.providers.Web3Provider(window.ethereum);
-          await provider.send("eth_requestAccounts", []);
-          const signer = provider.getSigner();
-          const address = await signer.getAddress();
-          document.getElementById("connectButton").innerHTML = ` 
-            <i class="fas fa-check-circle mr-1"></i> 
-            <span class="hidden sm:inline">${address.slice(0, 6)}...${address.slice(-4)}</span>
-          `;
-          isConnected = true;
-          document.querySelectorAll('#memeGrid button').forEach(btn => {
-            btn.disabled = false;
-            btn.title = '';
-          });
-        } catch (error) {
-          console.error("Wallet error:", error);
-          alert("Failed to connect wallet");
-        }
-      } else {
-        alert("Please install MetaMask or another wallet");
-      }
-    }
-
-    async function voteMeme(memeId) {
-      if (!isConnected) {
-        alert("You need to connect your wallet first");
-        return;
-      }
-
-      const meme = memes.find(m => m.id === memeId);
-      meme.votes += 1;
-      updateStats();
-      renderMemes();
-      alert(`Voted for meme: ${meme.title}`);
-    }
-
-    document.getElementById('connectButton').addEventListener('click', connectWallet);
-    document.getElementById('uploadButton').addEventListener('click', () => document.getElementById('uploadModal').classList.remove('hidden'));
-    document.getElementById('closeModal').addEventListener('click', () => document.getElementById('uploadModal').classList.add('hidden'));
-    document.getElementById('cancelUpload').addEventListener('click', () => document.getElementById('uploadModal').classList.add('hidden'));
-
-    document.getElementById('memeForm').addEventListener('submit', async (event) => {
-      event.preventDefault();
-      const title = document.getElementById('memeTitle').value;
-      const imageUrl = document.getElementById('memeUrl').value;
-      const discordNick = document.getElementById('discordNick').value;
-
-      if (!title || !imageUrl) {
-        alert("Title and Image URL are required");
-        return;
-      }
-
-      const newMeme = {
-        title,
-        url: imageUrl,
-        votes: 0,
-        author: discordNick || 'Anonymous'
-      };
-
-      memes.push(newMeme);
-      updateStats();
-      renderMemes();
-      document.getElementById('uploadModal').classList.add('hidden');
-      alert("Meme uploaded successfully!");
-    });
-
-    loadMemes();
+    renderMemes();
   </script>
-
 </body>
 </html>
