--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
   <script>
     let memes = [
-      { id: 1, title: "Meme 1", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme1.jpg", votes: 42, author: "memelord#1337" },
-      { id: 2, title: "Meme 2", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme2.jpg", votes: 35, author: "discord_user#4242" },
-      { id: 3, title: "Meme 3", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme3.jpg", votes: 28, author: null },
-      { id: 4, title: "Meme 4", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme4.jpg", votes: 25, author: "user#1234" },
-      { id: 5, title: "Meme 5", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme5.jpg", votes: 15, author: "user2#2345" },
-      { id: 6, title: "Meme 6", imageUrl: "https://dzmitryy1812.github.io/public/memes/meme6.jpg", votes: 10, author: "user3#3456" }
+      { id: 1, title: "Meme 1", imageUrl: "https://dzmitryy1812.github.io/public/memes/1.jpg", votes: 42, author: "memelord#1337" },
+      { id: 2, title: "Meme 2", imageUrl: "https://dzmitryy1812.github.io/public/memes/2.jpg", votes: 35, author: "discord_user#4242" },
+      { id: 3, title: "Meme 3", imageUrl: "https://dzmitryy1812.github.io/public/memes/3.jpg", votes: 28, author: null },
+      { id: 4, title: "Meme 4", imageUrl: "https://dzmitryy1812.github.io/public/memes/4.jpg", votes: 25, author: "user#1234" },
+      { id: 5, title: "Meme 5", imageUrl: "https://dzmitryy1812.github.io/public/memes/5.jpg", votes: 15, author: "user2#2345" },
+      { id: 6, title: "Meme 6", imageUrl: "https://dzmitryy1812.github.io/public/memes/6.jpg", votes: 10, author: "user3#3456" }
     ];
 
     const memeGrid = document.getElementById("memeGrid");
