Добавление смарт контракта

--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
     </div>
 
     <script>
+        const contractAddress = "0x4d569B8Fc88C33A5047Cb32B0e45366D3eBeaA77"; // Контракт для голосования
+        const abi = [
+            "function vote(uint memeId) public",
+            "function getVotes(uint memeId) public view returns (uint)"
+        ]; // ABI контракта
+
+        let provider;
+        let signer;
+        let contract;
         let memes = [
             {id: 1, title: 'Doge Classic', votes: 1520, url: 'https://dzmitryy1812.github.io/public/memes/1.jpg', author: 'memelord#1234'},
             {id: 2, title: 'Surprised Pikachu', votes: 2345, url: 'https://dzmitryy1812.github.io/public/memes/2.jpg', author: 'pokefan#5678'},
@@ -128,7 +137,18 @@
             {id: 6, title: 'Drake Hotline Bling', votes: 3120, url: 'https://dzmitryy1812.github.io/public/memes/6.jpg', author: 'drakepost#1234'}
         ];
 
-        // Render memes
+        // Установить провайдер и контракт
+        async function init() {
+            if (window.ethereum) {
+                provider = new ethers.providers.Web3Provider(window.ethereum);
+                signer = provider.getSigner();
+                contract = new ethers.Contract(contractAddress, abi, signer);
+            } else {
+                alert("Please install MetaMask!");
+            }
+        }
+
+        // Рендер мемов
         function renderMemes() {
             const memeGrid = document.getElementById('memeGrid');
             memeGrid.innerHTML = memes.map(meme => `
@@ -160,58 +180,38 @@
             `).join('');
         }
 
-        // Voting system
-        document.addEventListener('click', function(e) {
-            if(e.target.classList.contains('vote-btn')) {
+        // Голосование
+        document.addEventListener('click', async function(e) {
+            if (e.target.classList.contains('vote-btn')) {
                 const memeCard = e.target.closest('.meme-container');
-                const voteCount = memeCard.querySelector('.vote-count');
-                voteCount.textContent = parseInt(voteCount.textContent) + 1;
+                const memeId = memeCard.dataset.id;
                 
+                try {
+                    await contract.vote(memeId);
+                    const voteCount = memeCard.querySelector('.vote-count');
+                    voteCount.textContent = parseInt(voteCount.textContent) + 1;
+                    alert("Vote successful!");
+                } catch (err) {
+                    console.error(err);
+                    alert("Error voting: " + err.message);
+                }
+
                 e.target.classList.add('bg-orange-700');
                 setTimeout(() => e.target.classList.remove('bg-orange-700'), 200);
             }
         });
 
-        // Wallet connection
+        // Подключение кошелька
         document.getElementById('connectButton').addEventListener('click', async () => {
             try {
-                const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-                const btn = document.getElementById('connectButton');
-                btn.innerHTML = `<i class="fas fa-check-circle mr-2"></i>${accounts[0].slice(0,6)}...${accounts[0].slice(-4)}`;
-                btn.classList.add('bg-green-100', 'text-green-700', 'hover:scale-100');
+                await window.ethereum.request({ method: 'eth_requestAccounts' });
+                init();
             } catch (error) {
                 alert(`Error: ${error.message}`);
             }
         });
 
-        // Modal handling
-        const modal = document.getElementById('uploadModal');
-        const showModal = () => modal.style.display = 'flex';
-        const hideModal = () => modal.style.display = 'none';
-
-        document.getElementById('uploadButton').addEventListener('click', showModal);
-        document.getElementById('closeModal').addEventListener('click', hideModal);
-        document.getElementById('cancelBtn').addEventListener('click', hideModal);
-
-        // Add new meme
-        document.getElementById('memeForm').addEventListener('submit', (e) => {
-            e.preventDefault();
-            
-            const newMeme = {
-                id: memes.length + 1,
-                title: document.getElementById('memeTitle').value,
-                votes: 0,
-                url: document.getElementById('memeUrl').value,
-                author: document.getElementById('discordName').value
-            };
-
-            memes.push(newMeme);
-            renderMemes();
-            hideModal();
-            e.target.reset();
-        });
-
-        // Initial render
+        // Инициализация
         renderMemes();
     </script>
 </body>
